# post-quantum-signature-schemes

./: .gitignore  A BEFORE REDUCE  AFTER ot_times_p2.txt  After u32 byte  Cargo.toml  ENCODED L  FIRST.txt  M_matrices  README.md  SECOND.txt  THIRD.txt  Upper SPS.txt  build.rs  general  l_matrices.txt  output.txt  p1_matrices  p1_p1_transposed_added u32 byte  p2_matrices  p3_matrices  safe_mayo_12  sig  testertester
.cargo/: config.toml
benches/: my_benchmark.rs
benchmark_result/: benchmark-MAYO_1-ARMv8_bitsliced.csv  benchmark-MAYO_1-ARMv8_vmull.csv  benchmark-MAYO_1-bitsliced.csv  benchmark-MAYO_1ArrayImpl.csv  benchmark-MAYO_2-ARMv8_vmull.csv  benchmark-MAYO_2-bitsliced.csv  benchmark-MAYO_3-ARMv8_vmull.csv  benchmark-MAYO_3-bitsliced.csv  benchmark-MAYO_5-ARMv8_bitsliced.csv  benchmark-MAYO_5-ARMv8_vmull.csv  benchmark-MAYO_5-bitsliced.csv
benchmark_result/AVX_ADAPTION/: benchmark-MAYO_1-AVX_ADAPTION.csv  benchmark-MAYO_2-AVX_ADAPTION.csv  benchmark-MAYO_3-AVX_ADAPTION.csv  benchmark-MAYO_5-AVX_ADAPTION.csv
src/: asm_instructions.rs  assembly_test.s  benchmark.rs  bitsliced_arithmetic.rs  bitsliced_functionality.rs  constants.rs  crypto_primitives.rs  finite_field.rs  lib.rs  main.rs  mayo_functionality.rs  own_benchmark.rs  read_kat_file.rs  sample.rs  utils.rs  write_and_compare_kat_file.rs
src/arm_neon_intrinsic/: arm_intrinsic.rs  armv8_intrinsic.c  armv8_intrinsic_mayo1.c  armv8_intrinsic_mayo3.c
src/assembly/: arm_instructions.rs  armv8_instructions.c  armv8_instructions_mayo1.c  armv8_instructions_mayo2.c  armv8_instructions_mayo3.c  armv8_instructions_mayo5.c  test_file  vmull.c
src/assembly test/: assembly_test.s  test.c  test_file
src/benches/: benchmark.rs  my_benchmark.rs
src/genKAT/: aes128ctr.c  aes_c.c  bindings.rs  fips202.c  mem.h  randombytes_ctrdrbg.c
src/genKAT/Results MAYO/: PQCsignKAT_24_MAYO_2.txt  PQCsignKAT_32_MAYO_3.txt  PQCsignKAT_40_MAYO_5.txt
src/genkat/: aes_arm.c  aes_c.c  bindings.rs  mem.c
src/tempname/: bindings.rs
