[package]
name = "post-quantum-signature-schemes"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html





[features]
default = ["mayo1"]
mayo1 = []
mayo2 = []
mayo3 = []
mayo5 = []

[lib]
name = "lib"
path = "src/lib.rs"

[[bin]]
name = "bin"
path = "src/main.rs"


[build-dependencies]
cc = "1.0"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "my_benchmark"
harness = false
path = "src/benches/my_benchmark.rs"


[dependencies]
rand = "0.8.5"
sha3 = "0.10.8"
criterion-cycles-per-byte = "0.6.0"
aes = "0.8.3"
ctr = "0.9.2"
cipher = "0.4.4"
aes-prng = "0.2.1"
byteorder = "1.4.3"
libc = "0.2"
gnuplot = "0.0.42"

