[package]
name = "post-quantum-signature-schemes"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html





[features]
default = ["mayo1"]
system_aes = []  
mayo1 = []
mayo2 = []
mayo3 = []
mayo5 = []
bench = []
custom_stack = []
CCM1 = []
CCODROID-C4 = []


[lib]
name = "lib"
path = "src/lib.rs"

[[bin]]
name = "bin"
path = "src/main.rs"


[build-dependencies]
cc = "1.0"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "benchmark"
harness = false
path = "src/benches/benchmark.rs"


[dependencies]
rand = "0.8.5"
byteorder = "1.4.3"
libc = "0.2"
gnuplot = "0.0.42"
chrono = "0.4.38"
csv= "1.1"

